--- a/src/app/pages/carrito/carrito.component.css
+++ b/src/app/pages/carrito/carrito.component.css
@@ -8,11 +8,13 @@
 
 .main-container {
     background-color: #ffffff;
+    border-radius: 10;
+    margin: 10 10 10 10;
 }
 
 .order-taker {
     font-size: 18;
-    color: #0e3746;
+    color: #2d3440;
     font-weight: bold;
     ;
 }
@@ -47,7 +49,7 @@
 .btn-container {
     height: 60;
     vertical-align: center;
-    background-color: #0e3746;
+    background-color: #2d3440;
     border-radius: 6;
 }
 
@@ -81,8 +83,12 @@ Button {
 }
 
 .iconBorrar {
-    font-size: 18;
     margin-top: 2;
     text-align: center;
     color: rgb(247, 77, 77);
+}
+
+.icon-close {
+    width: 50;
+    font-size: 24;
 }
