--- a/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.html
+++ b/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.html
@@ -1,70 +1,75 @@
 <ns-action-bar title="Detalle" class="action-bar">
+    <ActionItem (tap)="borrarOrden(orden._id)">
+        <Button class="ico btn btn-outline btn-active iconDelete action-item" [text]="iconDelete"></Button>
+    </ActionItem>
 </ns-action-bar>
 
-<GridLayout rows="auto,*, 150" class="main-container visible" *ngIf="!isLoading">
+<GridLayout class="page">
+    <GridLayout rows="auto,*, 100" class="main-container visible" *ngIf="!isLoading">
 
-    <GridLayout row="0" rows="*">
-        <GridLayout rows="auto, auto" columns="auto, auto" class="date-container m-t-15 m-b-15">
-            <Label row="0" col="0" text="Fecha: "></Label>
-            <Label row="0" col="1" text="{{orden.fechaCreacion  | date:'fullDate':'es-EC'}}" textWrap="true"></Label>
-            <StackLayout row="1" colSpan="2" class="divider m-t-5"></StackLayout>
-        </GridLayout>
-    </GridLayout>
-
-    <RadListView row="1" [items]="detalles">
-
-        <ng-template let-detalles="item" let-i="index">
-
-            <GridLayout rows="auto, auto, auto, auto" columns="60, *, 30" class="order-details m-t-15">
-
-                <Image class="img-circle imageList" [src]="detalles.producto.img | imagen:'producto'"></Image>
-
-                <Label col="1" class="order-taker" [text]="detalles.producto.nombre" textWrap="true"></Label>
-
-                <StackLayout row="1" col="1" colSpan="2" class="items">
-                    <GridLayout columns="auto, *, auto, 30">
-                        <Label class="item-name" text="Precio Unitario" class="item-name"></Label>
-                        <Label col="2" class="item-price" text=" $ {{detalles.producto.precioUni | number:'.2-2'}}"></Label>
-                    </GridLayout>
-                    <GridLayout columns="auto, *, auto, 30">
-                        <Label class="item-name" text="Cantidad" class="item-name"></Label>
-                        <Label col="1" text="( {{detalles.cantidad}} )" class="item-quantity"></Label>
-                    </GridLayout>
-                    <GridLayout columns="auto, *, auto, 60" *ngIf="detalles.altura == 0 || detalles.numeroLetras == 0">
-                        <!-- <GridLayout columns="auto, *, auto, 30"> -->
-                        <Label class="item-name" text="Altura * Ancho" class="item-name"></Label>
-                        <Label col="1" text="( {{detalles.altura| number:'.2-2'}} x {{detalles.ancho | number:'.2-2'}} )m" class="item-quantity"></Label>
-                    </GridLayout>
-                    <GridLayout columns="auto, *, auto, 60" *ngIf="detalles.altura == 0 || detalles.numeroLetras == 0">
-                        <!-- <GridLayout columns="auto, *, auto, 30"> -->
-                        <Label class="item-name" text="Letras" class="item-name"></Label>
-                        <Label col="1" text="( {{detalles.numeroLetras}} )" class="item-quantity"></Label>
-                    </GridLayout>
-                </StackLayout>
-
-                <StackLayout row="2" col="1" class="hr-light m-y-5"></StackLayout>
-
-                <GridLayout row="3" col="1" columns="*, auto" class="sub-total">
-                    <Label text="Total"></Label>
-                    <Label col="1" class="font-weight-bold" text="$ {{detalles.precioFinal | number:'.2-2'}}"></Label>
-                </GridLayout>
-
+        <GridLayout row="0" rows="*">
+            <GridLayout rows="auto, auto" columns="auto, auto" class="date-container m-t-10 m-b-10">
+                <Label row="0" col="0" text="Fecha: "></Label>
+                <Label row="0" col="1" text="{{orden.fechaCreacion  | date:'fullDate':'es-EC'}}" textWrap="true"></Label>
+                <StackLayout row="1" colSpan="2" class="divider m-t-5"></StackLayout>
             </GridLayout>
-        </ng-template>
-
-    </RadListView>
-
-    <GridLayout row="2" rows="*, auto" class="summary m-t-20">
-        <GridLayout rows="auto, auto" columns="*, auto" class="grand-total-container m-x-15">
-            <StackLayout colSpan="2" class="divider m-b-10 m-t-5"></StackLayout>
-            <Label row="1" text="Grand Total"></Label>
-            <Label row="1" col="1" text="$ {{orden.total  | number:'.2-2'}} "></Label>
         </GridLayout>
-        <GridLayout class="m-x-15 m-y-10  btn-container" row="1">
-            <Button text="Eliminar Pedido" class="add-order btn btn-active" (tap)="borrarOrden(orden._id)"></Button>
+
+        <RadListView row="1" [items]="detalles">
+
+            <ng-template let-detalles="item" let-i="index">
+
+                <GridLayout rows="auto, auto, auto, auto" columns="60, *, 30" class="order-details m-t-15">
+
+                    <Image class="img-circle imageList" [src]="detalles.producto.img | imagen:'producto'"></Image>
+
+                    <Label col="1" class="order-taker" [text]="detalles.producto.nombre" textWrap="true"></Label>
+
+                    <StackLayout row="1" col="1" colSpan="2" class="items">
+                        <GridLayout columns="auto, *, auto, 30">
+                            <Label class="item-name" text="Precio Unitario" class="item-name"></Label>
+                            <Label col="2" class="item-price" text=" $ {{detalles.producto.precioUni | number:'.2-2'}}"></Label>
+                        </GridLayout>
+                        <GridLayout columns="auto, *, auto, 30">
+                            <Label class="item-name" text="Cantidad" class="item-name"></Label>
+                            <Label col="1" text="( {{detalles.cantidad}} )" class="item-quantity"></Label>
+                        </GridLayout>
+                        <GridLayout columns="auto, *, auto, 60" *ngIf="detalles.altura == 0 || detalles.numeroLetras == 0">
+                            <!-- <GridLayout columns="auto, *, auto, 30"> -->
+                            <Label class="item-name" text="Altura * Ancho" class="item-name"></Label>
+                            <Label col="1" text="( {{detalles.altura| number:'.2-2'}} x {{detalles.ancho | number:'.2-2'}} )m" class="item-quantity"></Label>
+                        </GridLayout>
+                        <GridLayout columns="auto, *, auto, 60" *ngIf="detalles.altura == 0 || detalles.numeroLetras == 0">
+                            <!-- <GridLayout columns="auto, *, auto, 30"> -->
+                            <Label class="item-name" text="Letras" class="item-name"></Label>
+                            <Label col="1" text="( {{detalles.numeroLetras}} )" class="item-quantity"></Label>
+                        </GridLayout>
+                    </StackLayout>
+
+                    <StackLayout row="2" col="1" class="hr-light m-y-5"></StackLayout>
+
+                    <GridLayout row="3" col="1" columns="*, auto" class="sub-total">
+                        <Label text="Total"></Label>
+                        <Label col="1" class="font-weight-bold" text="$ {{detalles.precioFinal | number:'.2-2'}}"></Label>
+                    </GridLayout>
+
+                </GridLayout>
+            </ng-template>
+
+        </RadListView>
+
+        <GridLayout row="2" rows="*" class="summary m-t-20">
+            <GridLayout rows="auto, auto" columns="*, auto" class="grand-total-container m-x-15">
+                <StackLayout colSpan="2" class="divider m-b-10 m-t-5"></StackLayout>
+                <Label row="1" text="Grand Total"></Label>
+                <Label row="1" col="1" text="$ {{orden.total  | number:'.2-2'}} "></Label>
+            </GridLayout>
+            <!-- <GridLayout class="m-x-15 m-y-10  btn-container" row="1">
+                <Button text="Eliminar Pedido" class="add-order btn btn-active" (tap)="borrarOrden(orden._id)"></Button>
+            </GridLayout> -->
         </GridLayout>
+
+
     </GridLayout>
-
-
+    <ActivityIndicator class="activity-indicator" [busy]="isLoading" [visibility]="isLoading ? 'visible' : 'collapse'" horizontalAlignment="center" verticalAlignment="center"></ActivityIndicator>
 </GridLayout>
-<ActivityIndicator class="activity-indicator" [busy]="isLoading" [visibility]="isLoading ? 'visible' : 'collapse'" horizontalAlignment="center" verticalAlignment="center"></ActivityIndicator>
