--- a/src/app/pages/productos/producto-detalle/producto.component.html
+++ b/src/app/pages/productos/producto-detalle/producto.component.html
@@ -30,9 +30,9 @@
                     <Label class="h4" text="Cantidad:" textWrap="true"></Label>
 
                     <GridLayout class="m-y-12" columns="50,40,50">
-                        <Button col="0" [text]="iconMenos" class="btn icon-cantidad ico btn-active" (tap)="variarPrecio(-1)"></Button>
+                        <Button col="0" [text]="iconMenos" class="btn icon-cantidad ico icon-3x btn-active" (tap)="variarPrecio(-1)"></Button>
                         <Label col="1" class="input-cantidad p-t-10 animate-transition-up" [text]="cantidad"></Label>
-                        <Button col="2" [text]="iconMas" class="btn icon-cantidad ico btn-active" (tap)="variarPrecio(+1)"></Button>
+                        <Button col="2" [text]="iconMas" class="btn icon-cantidad ico icon-3x btn-active" (tap)="variarPrecio(+1)"></Button>
                     </GridLayout>
 
                 </StackLayout>
@@ -71,7 +71,7 @@
                 <Label row="0" text="Costo"></Label>
                 <StackLayout row="1" class="hr-light"></StackLayout>
                 <Label *ngIf="aparecer" col="0" row="2" class="h3 text-danger text-center animate-transition-up m-y-10" textWrap="true" text="${{precioFinal | number:'.2-2'}}"></Label>
-                <Button col="0" row="3" [isEnabled]="activar || !rotulos && !rotulos3D" [text]="iconCarrito" class="m-15 btn ico icon-carrito btn-active" width="50" (tap)="agregarPedido()"></Button>
+                <Button col="0" row="3" [isEnabled]="activar || !rotulos && !rotulos3D" [text]="iconCarrito" class="m-15 btn ico icon-cart-add icon-2x btn-active" width="50" (tap)="agregarPedido()"></Button>
             </GridLayout>
         </GridLayout>
 
