--- a/src/app/pages/productos/productos.component.css
+++ b/src/app/pages/productos/productos.component.css
@@ -1,5 +1,5 @@
     .card {
-        background-color: #f0f0f0;
+        background-color: #ffffff;
         margin: 5;
         margin: 5;
         margin-right: 10;
@@ -28,7 +28,7 @@
     .card-cotizar {
         margin: 10;
         padding: 10;
-        background-color: #F8F0EE;
+        background-color: #ffffff;
         border-radius: 7;
         vertical-align: center;
     }
@@ -48,7 +48,6 @@
     }
     
     .icon-cantidad {
-        font-size: 12;
         color: #F8F0EE;
         border-radius: 80%;
         background-color: #ef424c;
@@ -76,15 +75,14 @@
     }
     
     .icono-cart {
-        font-size: 18;
+        font-size: 24;
         color: #28bfdb;
     }
     
-    .icon-carrito {
+    .icon-cart-add {
         border-bottom-right-radius: 10;
         border-bottom-left-radius: 10;
         border-top-right-radius: 10;
-        font-size: 24;
         background-color: #0e3743;
         color: #F8F0EE;
     }
