--- a/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.html
+++ b/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.html
@@ -1,14 +1,14 @@
 <ns-action-bar title="Detalle" class="action-bar">
     <ActionItem (tap)="borrarOrden(orden._id)">
-        <Button class="ico btn btn-outline btn-active iconDelete action-item" [text]="iconDelete"></Button>
+        <Button class="ico btn btn-flat btn-active iconDelete action-item" [text]="iconDelete"></Button>
     </ActionItem>
 </ns-action-bar>
 
 <GridLayout class="page">
-    <GridLayout rows="auto,*, 100" class="main-container visible" *ngIf="!isLoading">
+    <GridLayout rows="auto,*, 80" class="main-container visible" *ngIf="!isLoading">
 
         <GridLayout row="0" rows="*">
-            <GridLayout rows="auto, auto" columns="auto, auto" class="date-container m-t-10 m-b-10">
+            <GridLayout rows="auto, auto" columns="auto, auto" class="date-container">
                 <Label row="0" col="0" text="Fecha: "></Label>
                 <Label row="0" col="1" text="{{orden.fechaCreacion  | date:'fullDate':'es-EC'}}" textWrap="true"></Label>
                 <StackLayout row="1" colSpan="2" class="divider m-t-5"></StackLayout>
@@ -34,12 +34,12 @@
                             <Label class="item-name" text="Cantidad" class="item-name"></Label>
                             <Label col="1" text="( {{detalles.cantidad}} )" class="item-quantity"></Label>
                         </GridLayout>
-                        <GridLayout columns="auto, *, auto, 60" *ngIf="detalles.altura == 0 || detalles.numeroLetras == 0">
+                        <GridLayout columns="auto, *, auto, 60" *ngIf="!(detalles.altura == 0)">
                             <!-- <GridLayout columns="auto, *, auto, 30"> -->
                             <Label class="item-name" text="Altura * Ancho" class="item-name"></Label>
                             <Label col="1" text="( {{detalles.altura| number:'.2-2'}} x {{detalles.ancho | number:'.2-2'}} )m" class="item-quantity"></Label>
                         </GridLayout>
-                        <GridLayout columns="auto, *, auto, 60" *ngIf="detalles.altura == 0 || detalles.numeroLetras == 0">
+                        <GridLayout columns="auto, *, auto, 60" *ngIf="!(detalles.numeroLetras == 0)">
                             <!-- <GridLayout columns="auto, *, auto, 30"> -->
                             <Label class="item-name" text="Letras" class="item-name"></Label>
                             <Label col="1" text="( {{detalles.numeroLetras}} )" class="item-quantity"></Label>
