--- a/src/app/pages/productos/productos.component.css
+++ b/src/app/pages/productos/productos.component.css
@@ -74,9 +74,14 @@
         color: #eae8dc;
     }
     
-    .icono-cart {
+    .icon-search-color {
+        color: #eae8dc;
+    }
+    
+    .icono-cart-color {
         font-size: 24;
         color: #28bfdb;
+        padding-right: -2;
     }
     
     .icon-cart-add {
