--- a/src/app/login/signup.component.css
+++ b/src/app/login/signup.component.css
@@ -1,16 +1,17 @@
 /* Estilo Signup */
 
-.page {
+FlexboxLayout {
     align-items: center;
     flex-direction: column;
     justify-content: center;
     background-size: cover;
-    background-image: url("~/assets/images/background.png");
+    /* background-image: url("~/assets/images/background.png"); */
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ef424c+0,2989d8+50,207cca+51,2d3440+100 */
 }
 
 .card {
     background-color: #f0f0f0;
-    padding: 10 10 10 10;
+    padding: 10;
     border-radius: 7;
 }
 
@@ -31,6 +32,7 @@
 .container-bottom {
     margin-top: 10;
     margin-bottom: 10;
+    padding: 1;
 }
 
 .container-top {
