--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -2,7 +2,7 @@
 
     <ActionItem *ngIf="!aparecer" ios.position="rigth" (tap)="goCarrito()">
         <StackLayout orientation="horizontal">
-            <Label class="p-1 ico icono-cart" [text]="iconCarrito"></Label>
+            <Label class="ico icono-cart-color" [text]="iconCarrito"></Label>
             <StackLayout class="badge" *ngIf="cs.items.length > 0">
                 <Label [text]="cs.items.length" class="badge-text"></Label>
             </StackLayout>
@@ -10,11 +10,11 @@
     </ActionItem>
 
     <ActionItem *ngIf="!aparecer" ios.position="rigth" (tap)="aparecerBuscar(+1)">
-        <Label class="p-15 ico icon-2x" [text]="iconSearch"></Label>
+        <Button class="btn btn-flat btn-active action-item icon-search-color ico icon-2x" [text]="iconSearch"></Button>
     </ActionItem>
 
     <ActionItem *ngIf="aparecer" (tap)="aparecerBuscar(+1)" ios.position="right">
-        <Label class="p-15 ico iconos" text="Cerrar"></Label>
+        <Button class="btn btn-flat btn-active action-item iconos ico" text="cerrar"></Button>
     </ActionItem>
 
     <SearchBar class="searchbar animate-transition-slide" color="white" textFieldHintColor="white" *ngIf="aparecer" hint="Buscar producto..." (textChange)="buscarProducto($event)"></SearchBar>
