--- a/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.html
+++ b/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.html
@@ -1,5 +1,5 @@
 <ns-action-bar title="Detalle" class="action-bar">
-    <ActionItem (tap)="borrarOrden(orden._id)">
+    <ActionItem *ngIf="!isLoading" (tap)="borrarOrden(orden._id)">
         <Button class="ico btn btn-flat btn-active iconDelete action-item" [text]="iconDelete"></Button>
     </ActionItem>
 </ns-action-bar>
