--- a/src/app/pages/productos/producto-detalle/producto.component.html
+++ b/src/app/pages/productos/producto-detalle/producto.component.html
@@ -67,11 +67,13 @@
 
             </GridLayout>
 
-            <GridLayout row="1" col="1" rows="*,*,*,*" columns="*" class="card-cotizar">
+            <GridLayout row="1" col="1" rows="*,*,*,*,*,*" columns="*" class="card-cotizar">
                 <Label row="0" text="Costo"></Label>
                 <StackLayout row="1" class="hr-light"></StackLayout>
                 <Label *ngIf="aparecer" col="0" row="2" class="h3 text-danger text-center animate-transition-up m-y-10" textWrap="true" text="${{precioFinal | number:'.2-2'}}"></Label>
-                <Button col="0" row="3" [isEnabled]="activar || !rotulos && !rotulos3D" [text]="iconCarrito" class="m-15 btn ico icon-cart-add icon-2x btn-active" width="50" (tap)="agregarPedido()"></Button>
+                <Label row="3" text="Realizar Pedido:"></Label>
+                <StackLayout row="4" class="hr-light"></StackLayout>
+                <Button col="0" row="5" [isEnabled]="activar || !rotulos && !rotulos3D" [text]="iconCarrito" class=" btn ico icon-cart-add icon-2x btn-active" width="50" (tap)="agregarPedido()"></Button>
             </GridLayout>
         </GridLayout>
 
