--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -10,14 +10,14 @@
     </ActionItem>
 
     <ActionItem *ngIf="!aparecer" ios.position="rigth" (tap)="aparecerBuscar(+1)">
-        <Button class="btn btn-flat btn-active action-item icon-search-color ico icon-2x" [text]="iconSearch" [isEnable]="productos.length == 0"></Button>
+        <Button class="btn btn-flat btn-active icon-search-color ico icon-2x" [text]="iconSearch" [isEnable]="productos.length == 0"></Button>
     </ActionItem>
 
     <ActionItem *ngIf="aparecer" (tap)="aparecerBuscar(+1)" ios.position="right">
         <Button class="btn btn-flat btn-active action-item iconos ico" text="cerrar"></Button>
     </ActionItem>
 
-    <SearchBar class="searchbar animate-transition-slide" color="white" textFieldHintColor="white" *ngIf="aparecer" hint="Buscar producto..." (textChange)="buscarProducto($event)"></SearchBar>
+    <SearchBar class="searchbar animate-transition-slide" *ngIf="aparecer" hint="Buscar producto..." (textChange)="buscarProducto($event)"></SearchBar>
 
 </ns-action-bar>
 
