--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -28,11 +28,16 @@ TextField {
     background-color: #ef424c;
     margin-left: 0;
     margin-right: 0;
+    height: 50;
+    border-radius: 5;
+    font-size: 14;
+    font-weight: 600;
+    color: #f4f2ec;
 }
 
 TextField {
     placeholder-color: #2d3440;
-    color: black;
+    /* color: black; */
 }
 
 .label {
