--- a/src/app/login/signup.component.css
+++ b/src/app/login/signup.component.css
@@ -15,6 +15,13 @@ FlexboxLayout {
     border-radius: 7;
 }
 
+.btn-primary {
+    margin: 5 20 5 20;
+    height: 50;
+    border-radius: 5;
+    font-size: 14;
+}
+
 .form {
     margin-left: 30;
     margin-right: 30;
