--- a/src/app/pages/carrito/carrito.component.css
+++ b/src/app/pages/carrito/carrito.component.css
@@ -84,8 +84,10 @@ Button {
 
 .iconBorrar {
     height: 40;
+    width: 40;
     margin: 0 0 15 0;
     padding: 0%;
+    border-radius: 100%;
     font-size: 24;
     text-align: center;
     color: rgb(247, 77, 77);
@@ -93,5 +95,8 @@ Button {
 
 .icon-close {
     width: 50;
+    height: 50;
     font-size: 24;
+    border-radius: 100%;
+    padding: 10;
 }
