--- a/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.css
+++ b/src/app/pages/cotizaciones/ordenes-detalle/ordenes-detalle.component.css
@@ -100,4 +100,7 @@ Button {
 .iconDelete {
     font-size: 24;
     width: 40;
+    height: 40;
+    border-radius: 50%;
+    color: rgb(247, 77, 77);
 }
