--- a/src/app/login/signup.component.html
+++ b/src/app/login/signup.component.html
@@ -4,7 +4,7 @@
 
         <StackLayout class="container-top card">
             <Image class="logo" src="~/assets/images/logo.png"></Image>
-            <Label class="header" text="Digital Ads"></Label>
+            <Label class="header" text="Se Cliente de Digital Ads"></Label>
             <Label text="" class="hr-light"></Label>
         </StackLayout>
 
