--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -10,33 +10,33 @@
             </StackLayout>
 
             <GridLayout class="margen" row="1" rows="auto" columns="40, *, auto">
-                <Label class="ico icon-2x text-primary" [text]="iconNombre" row="0" col="0"></Label>
+                <Label class="ico icon-2x text-primary text-center" [text]="iconNombre" row="0" col="0"></Label>
                 <StackLayout row="0" col="1">
                     <Label class="h5" text="Nombre" textWrap="true"></Label>
                     <Label class="" [text]="usuario.nombre" textWrap="true"></Label>
                     <StackLayout class="hr-light margen-linea"></StackLayout>
                 </StackLayout>
-                <Label class="ico icon-2x text-muted" [text]="iconEditar" (tap)="modificar('Nombre', usuario)" row="0" col="2"></Label>
+                <Label class="ico icon-2x text-muted text-center" [text]="iconEditar" (tap)="modificar('Nombre', usuario)" row="0" col="2"></Label>
             </GridLayout>
 
             <GridLayout class="margen" row="2" rows="auto" columns="40, *, auto">
-                <Label class="ico icon-2x text-primary" [text]="iconEmail" row="0" col="0"></Label>
+                <Label class="ico icon-2x text-primary text-center" [text]="iconEmail" row="0" col="0"></Label>
                 <StackLayout row="0" col="1">
                     <Label class="h5" text="Correo Electrónico" textWrap="true"></Label>
                     <Label class="" [text]="usuario.email" textWrap="true"></Label>
                     <StackLayout class="hr-light margen-linea"></StackLayout>
                 </StackLayout>
-                <Label class="ico icon-2x text-muted" [text]="iconEditar" (tap)="modificar('Correo Electrónico', usuario)" row="0" col="2"></Label>
+                <Label class="ico icon-2x text-muted text-center" [text]="iconEditar" (tap)="modificar('Correo Electrónico', usuario)" row="0" col="2"></Label>
             </GridLayout>
 
             <GridLayout class="margen" row="3" rows="auto" columns="40, *, auto">
-                <Label class="ico icon-2x text-primary" [text]="iconTelefono" row="0" col="0"></Label>
+                <Label class="ico icon-2x text-primary text-center" [text]="iconTelefono" row="0" col="0"></Label>
                 <StackLayout row="0" col="1">
                     <Label class="h5" text="Teléfono" textWrap="true"></Label>
                     <Label class="" [text]="usuario.telefono" textWrap="true"></Label>
                     <StackLayout class="hr-light margen-linea"></StackLayout>
                 </StackLayout>
-                <Label class="ico icon-2x text-muted" [text]="iconEditar" (tap)="modificar('Telefono', usuario)" row="0" col="2"></Label>
+                <Label class="ico icon-2x text-muted text-center" [text]="iconEditar" (tap)="modificar('Telefono', usuario)" row="0" col="2"></Label>
             </GridLayout>
 
         </GridLayout>
