--- a/src/app/pages/productos/productos.component.css
+++ b/src/app/pages/productos/productos.component.css
@@ -1,9 +1,6 @@
     .card {
         background-color: #ffffff;
-        margin: 5;
-        margin: 5;
-        margin-right: 10;
-        margin-left: 10;
+        margin: 5 10 5 10;
         border-radius: 7;
     }
     
