--- a/src/app/pages/cotizaciones/cotizaciones.component.html
+++ b/src/app/pages/cotizaciones/cotizaciones.component.html
@@ -7,12 +7,13 @@
     <ActivityIndicator class="activity-indicator" [busy]="isLoading" [visibility]="cotizaciones.length == 0 ? 'visible' : 'collapse'" horizontalAlignment="center" verticalAlignment="center"></ActivityIndicator>
 </StackLayout>
 
-<GridLayout rows="*" *ngIf="cotizaciones.length != 0">
+<GridLayout rows="*" *ngIf="cotizaciones.length != 0" class="page">
 
-    <RadListView class="page p-t-5" [items]="cotizaciones" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
+    <RadListView class="m-y-5" [items]="cotizaciones" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
         <ng-template tkListItemTemplate let-cotizacion="item" let-i="index">
 
-            <GridLayout class="card" rows="auto" columns="30,*,40" [nsRouterLink]="['/detalles', cotizacion._id]" pageTransition="slide">
+            <!-- <GridLayout class="card" rows="auto" columns="30,*,40" (tap)="irDetalle(cotizacion._id,i)"z> -->
+            <GridLayout class="card" rows="auto" columns="30,*,40" (tap)="obtenerPosicionArreglo(i)" [nsRouterLink]="['/detalles', cotizacion._id]" pageTransition="slide">
 
                 <Label class="text-index" row="0" col="0" [text]="i+1" textWrap="true"></Label>
 
